cards contact pagina

--- a/contacten.html
+++ b/contacten.html
@@ -35,6 +35,44 @@
     </div>
 
 
+    <div class="container-sm">
+        <div class="row">
+          <div class="col-sm-3">
+            <div class="card" style="width: 18rem">
+              <img class="card-img-top" src="..." alt="Card image cap" />
+              <div class="card-body">
+                <h5 class="card-title">Teams</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="card" style="width: 18rem">
+              <img class="card-img-top" src="..." alt="Card image cap" />
+              <div class="card-body">
+                <h5 class="card-title">Outlook</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="card" style="width: 18rem">
+              <img class="card-img-top" src="..." alt="Card image cap" />
+              <div class="card-body">
+                <h5 class="card-title"></h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="card" style="width: 18rem">
+              <img class="card-img-top" src="..." alt="Card image cap" />
+              <div class="card-body">
+                <h5 class="card-title"></h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
     <footer>
         <div class="container-fluid">
             <div class="row">
