--- a/projecten.html
+++ b/projecten.html
@@ -40,7 +40,7 @@
 
     <div class="container-sm">
       <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm-3">
           <div class="card" style="width: 18rem">
             <img class="card-img-top" src="..." alt="Card image cap" />
             <div class="card-body">
@@ -48,7 +48,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-3">
           <div class="card" style="width: 18rem">
             <img class="card-img-top" src="..." alt="Card image cap" />
             <div class="card-body">
@@ -56,7 +56,15 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-3">
+          <div class="card" style="width: 18rem">
+            <img class="card-img-top" src="..." alt="Card image cap" />
+            <div class="card-body">
+              <h5 class="card-title">Webcatalogus</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-3">
           <div class="card" style="width: 18rem">
             <img class="card-img-top" src="..." alt="Card image cap" />
             <div class="card-body">
