--- a/about me.html
+++ b/about me.html
@@ -22,10 +22,10 @@
                     <nav>
                         <h3>
                             <ul>
-                                <a href="contacten.html">Contact</a>
-                                <a href="about me.html">About me</a>
-                                <a href="index.html">home</a>
-                                <a href="projecten.html">Projecten</a>
+                                <a class="text-white" href="contacten.html">Contact</a>
+                                <a class="text-white" href="about me.html">About me</a>
+                                <a class="text-white" href="index.html">home</a>
+                                <a class="text-white" href="projecten.html">Projecten</a>
                             </ul>
                         </h3>
                     </nav>
