--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                     <nav>
                         <h3>
                             <ul>
-                                <a href="contacten.html">Contact</a>
-                                <a href="about me.html">About me</a>
-                                <a href="index.html">home</a>
-                                <a href="projecten.html">Projecten</a>
+                                <a class="text-white" href="contacten.html">Contact</a>
+                                <a class="text-white" href="about me.html">About me</a>
+                                <a class="text-white" href="index.html">home</a>
+                                <a class="text-white" href="projecten.html">Projecten</a>
                             </ul>
                         </h3>
                     </nav>
@@ -40,17 +40,17 @@
             <div class="col-sm-12">
                 <main>
 
-                    <h1>
+                    <h1 class="text-black">
                         <article>Portfolio</article>
                     </h1>
 
-                    <h2>
+                    <h2 class="text-black">
                         <article>Xander Zwolsman</article>
 
                     </h2>
 
 
-                    <h2>
+                    <h2 class="text-black">
                         <article>Software developer</article>
                     </h2>
                 </main>
