--- a/projecten.html
+++ b/projecten.html
@@ -26,10 +26,10 @@
             <nav>
               <h3>
                 <ul>
-                  <a href="contacten.html">Contact</a>
-                  <a href="about me.html">About me</a>
-                  <a href="index.html">home</a>
-                  <a href="projecten.html">Projecten</a>
+                  <a class="text-white" href="contacten.html">Contact</a>
+                  <a class="text-white" href="about me.html">About me</a>
+                  <a class="text-white" href="index.html">home</a>
+                  <a class="text-white" href="projecten.html">Projecten</a>
                 </ul>
               </h3>
             </nav>
@@ -42,33 +42,33 @@
       <div class="row">
         <div class="col-sm-3">
           <div class="card" style="width: 18rem">
-            <img class="card-img-top" src="..." alt="Card image cap" />
+            <img class="card-img-top height" src="img/hogerLager.PNG" alt="Card image cap" />
             <div class="card-body">
-              <h5 class="card-title">Build a Game</h5>
+              <h5 class="card-title center">Build a Game</h5>
             </div>
           </div>
         </div>
         <div class="col-sm-3">
           <div class="card" style="width: 18rem">
-            <img class="card-img-top" src="..." alt="Card image cap" />
+            <img class="card-img-top height" src="img/download (1).jpg" alt="Card image cap" />
             <div class="card-body">
-              <h5 class="card-title">Hoger Lager</h5>
+              <h5 class="card-title center">Hoger Lager</h5>
             </div>
           </div>
         </div>
         <div class="col-sm-3">
           <div class="card" style="width: 18rem">
-            <img class="card-img-top" src="..." alt="Card image cap" />
+            <img class="card-img-top height" src="img/webcatalogus.PNG" alt="Card image cap" />
             <div class="card-body">
-              <h5 class="card-title">Webcatalogus</h5>
+              <h5 class="card-title center">Webcatalogus</h5>
             </div>
           </div>
         </div>
         <div class="col-sm-3">
           <div class="card" style="width: 18rem">
-            <img class="card-img-top" src="..." alt="Card image cap" />
+            <img class="card-img-top height" src="..." alt="Card image cap" />
             <div class="card-body">
-              <h5 class="card-title">Webcatalogus</h5>
+              <h5 class="card-title center">Webcatalogus</h5>
             </div>
           </div>
         </div>
