--- a/about me.html
+++ b/about me.html
@@ -38,7 +38,7 @@
     <footer>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lf"></div>
+                <div class="col-lg"></div>
             </div>
         </div>
     </footer>
