--- a/index.html
+++ b/index.html
@@ -35,38 +35,40 @@
     </div>
 
 
-    <div class="container-fluid">
+    <div class="container-lg">
         <div class="row">
-            <div class="col-sm-12">
-                <main>
-
-                    <h1 class="text-black">
-                        <article>Portfolio</article>
-                    </h1>
-
-                    <h2 class="text-black">
-                        <article>Xander Zwolsman</article>
-
-                    </h2>
-
-
-                    <h2 class="text-black">
-                        <article>Software developer</article>
-                    </h2>
-                </main>
+            <div class="col-sm">
+                <h1 class="text-black">
+                    <article>Portfolio</article>
+                </h1>
+                <h2 class="text-black">
+                    <article>Xander Zwolsman</article>
+                </h2>
+                <h2 class="text-black">
+                    <article>Software developer</article>
+                </h2>
             </div>
         </div>
     </div>
 
 
+    <div class="container-lg">
+        <div class="row">
+            <div class="col-lg height-top">
+
+            </div>
+        </div>
+    </div>
+
 
     <footer>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lf"></div>
+                <div class="col-lg"></div>
             </div>
         </div>
     </footer>
+
 </body>
 
 </html>
