--- a/projecten.html
+++ b/projecten.html
@@ -1,86 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="css/style.css" />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-    <title>Portfolio</title>
-  </head>
 
-  <body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <link rel="stylesheet" href="css/style.css" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <title>Portfolio</title>
+</head>
+
+<body>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg">
+        <header>
+          <nav>
+            <h3>
+              <ul>
+                <a class="text-white" href="contacten.html">Contact</a>
+                <a class="text-white" href="about me.html">About me</a>
+                <a class="text-white" href="index.html">home</a>
+                <a class="text-white" href="projecten.html">Projecten</a>
+              </ul>
+            </h3>
+          </nav>
+        </header>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="container-sm">
+    <div class="row">
+      <div class="col-sm-3">
+        <div class="card" style="width: 18rem">
+          <img class="card-img-top height" src="img/hogerLager.PNG" alt="Card image cap" />
+          <div class="card-body">
+            <h5 class="card-title center">Build a Game</h5>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-3">
+        <div class="card" style="width: 18rem">
+          <img class="card-img-top height" src="img/download (1).jpg" alt="Card image cap" />
+          <div class="card-body">
+            <h5 class="card-title center">Hoger Lager</h5>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-3">
+        <div class="card" style="width: 18rem">
+          <img class="card-img-top height" src="img/webcatalogus.PNG" alt="Card image cap" />
+          <div class="card-body">
+            <h5 class="card-title center">Webcatalogus</h5>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-3">
+        <div class="card" style="width: 18rem">
+          <img class="card-img-top height" src="..." alt="Card image cap" />
+          <div class="card-body">
+            <h5 class="card-title center">Webcatalogus</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <footer>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-lg">
-          <header>
-            <nav>
-              <h3>
-                <ul>
-                  <a class="text-white" href="contacten.html">Contact</a>
-                  <a class="text-white" href="about me.html">About me</a>
-                  <a class="text-white" href="index.html">home</a>
-                  <a class="text-white" href="projecten.html">Projecten</a>
-                </ul>
-              </h3>
-            </nav>
-          </header>
-        </div>
+        <div class="col-lf"></div>
       </div>
     </div>
+  </footer>
+</body>
 
-    <div class="container-sm">
-      <div class="row">
-        <div class="col-sm-3">
-          <div class="card" style="width: 18rem">
-            <img class="card-img-top height" src="img/hogerLager.PNG" alt="Card image cap" />
-            <div class="card-body">
-              <h5 class="card-title center">Build a Game</h5>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-3">
-          <div class="card" style="width: 18rem">
-            <img class="card-img-top height" src="img/download (1).jpg" alt="Card image cap" />
-            <div class="card-body">
-              <h5 class="card-title center">Hoger Lager</h5>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-3">
-          <div class="card" style="width: 18rem">
-            <img class="card-img-top height" src="img/webcatalogus.PNG" alt="Card image cap" />
-            <div class="card-body">
-              <h5 class="card-title center">Webcatalogus</h5>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-3">
-          <div class="card" style="width: 18rem">
-            <img class="card-img-top height" src="..." alt="Card image cap" />
-            <div class="card-body">
-              <h5 class="card-title center">Webcatalogus</h5>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <footer>
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-lf"></div>
-        </div>
-      </div>
-    </footer>
-  </body>
 </html>
