css verwijderd bij de nav en footer

--- a/about me.html
+++ b/about me.html
@@ -18,14 +18,14 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg">
-                <header>
+                <header class="justify-content-center d-flex pt-3 bg-secondary">
                     <nav>
                         <h3>
                             <ul>
-                                <a class="text-white" href="contacten.html">Contact</a>
-                                <a class="text-white" href="about me.html">About me</a>
-                                <a class="text-white" href="index.html">home</a>
-                                <a class="text-white" href="projecten.html">Projecten</a>
+                                <a class="text-white mx-1" href="contacten.html">Contact</a>
+                                <a class="text-white mx-1" href="about me.html">About me</a>
+                                <a class="text-white mx-1" href="index.html">home</a>
+                                <a class="text-white mx-1" href="projecten.html">Projecten</a>
                             </ul>
                         </h3>
                     </nav>
@@ -38,7 +38,7 @@
     <footer>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg"></div>
+                <div class="col-lg bg-secondary position-absolute top-100 start-50 translate-middle"></div>
             </div>
         </div>
     </footer>
