--- a/projecten.html
+++ b/projecten.html
@@ -13,25 +13,24 @@
   <title>Portfolio</title>
 </head>
 
-<body>
-  <div class="container-fluid">
-    <div class="row">
+<div class="container-fluid">
+  <div class="row">
       <div class="col-lg">
-        <header>
-          <nav>
-            <h3>
-              <ul>
-                <a class="text-white" href="contacten.html">Contact</a>
-                <a class="text-white" href="about me.html">About me</a>
-                <a class="text-white" href="index.html">home</a>
-                <a class="text-white" href="projecten.html">Projecten</a>
-              </ul>
-            </h3>
-          </nav>
-        </header>
+          <header class="justify-content-center d-flex pt-3 bg-secondary">
+              <nav>
+                  <h3>
+                      <ul>
+                          <a class="text-white mx-1" href="contacten.html">Contact</a>
+                          <a class="text-white mx-1" href="about me.html">About me</a>
+                          <a class="text-white mx-1" href="index.html">home</a>
+                          <a class="text-white mx-1" href="projecten.html">Projecten</a>
+                      </ul>
+                  </h3>
+              </nav>
+          </header>
       </div>
-    </div>
   </div>
+</div>
 
 
   <div class="container-sm">
@@ -74,11 +73,13 @@
 
   <footer>
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-lf"></div>
-      </div>
+        <div class="row">
+            <div class="col-lg bg-secondary position-absolute top-100 start-50 translate-middle"></div>
+        </div>
     </div>
-  </footer>
+</footer>
+
+
 </body>
 
 </html>
