ccs verwijderd op projecten page

--- a/projecten.html
+++ b/projecten.html
@@ -20,10 +20,10 @@
               <nav>
                   <h3>
                       <ul>
-                          <a class="text-white mx-1" href="contacten.html">Contact</a>
-                          <a class="text-white mx-1" href="about me.html">About me</a>
                           <a class="text-white mx-1" href="index.html">home</a>
+                          <a class="text-white mx-1" href="about me.html">About me</a>
                           <a class="text-white mx-1" href="projecten.html">Projecten</a>
+                          <a class="text-white mx-1" href="contacten.html">Contact</a>
                       </ul>
                   </h3>
               </nav>
@@ -35,35 +35,43 @@
 
   <div class="container-sm">
     <div class="row">
-      <div class="col-sm-3">
+      <div class="col-sm-3 border border-secondary mt-5 ms-5">
         <div class="card" style="width: 18rem">
           <img class="card-img-top height" src="img/hogerLager.PNG" alt="Card image cap" />
           <div class="card-body">
-            <h5 class="card-title center">Build a Game</h5>
+            <h5 class="card-title text-center">Build a Game</h5>
           </div>
         </div>
       </div>
-      <div class="col-sm-3">
+      <div class="col-sm-3 border border-secondary mt-5 ms-5">
         <div class="card" style="width: 18rem">
           <img class="card-img-top height" src="img/download (1).jpg" alt="Card image cap" />
           <div class="card-body">
-            <h5 class="card-title center">Hoger Lager</h5>
+            <h5 class="card-title text-center">Hoger Lager</h5>
           </div>
         </div>
       </div>
-      <div class="col-sm-3">
+      <div class="col-sm-3 border border-secondary mt-5 ms-5">
         <div class="card" style="width: 18rem">
           <img class="card-img-top height" src="img/webcatalogus.PNG" alt="Card image cap" />
           <div class="card-body">
-            <h5 class="card-title center">Webcatalogus</h5>
+            <h5 class="card-title text-center">Webcatalogus</h5>
           </div>
         </div>
       </div>
-      <div class="col-sm-3">
+      <div class="col-sm-3 border border-secondary mt-5 ms-5">
         <div class="card" style="width: 18rem">
           <img class="card-img-top height" src="..." alt="Card image cap" />
           <div class="card-body">
-            <h5 class="card-title center">Webcatalogus</h5>
+            <h5 class="card-title text-center">Boter kaas eiren</h5>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-3 border border-secondary mt-5 ms-5">
+        <div class="card" style="width: 18rem">
+          <img class="card-img-top height" src="..." alt="Card image cap" />
+          <div class="card-body">
+            <h5 class="card-title text-center">Dashboard</h5>
           </div>
         </div>
       </div>
