informatie over projecten

--- a/projecten.html
+++ b/projecten.html
@@ -20,10 +20,10 @@
               <nav>
                   <h3>
                       <ul>
-                          <a class="text-white mx-1" href="index.html">home</a>
-                          <a class="text-white mx-1" href="about me.html">About me</a>
-                          <a class="text-white mx-1" href="projecten.html">Projecten</a>
-                          <a class="text-white mx-1" href="contacten.html">Contact</a>
+                          <a class="text-white mx-1 text-decoration-none" href="index.html">home</a>
+                          <a class="text-white mx-1 text-decoration-none" href="about me.html">About me</a>
+                          <a class="text-white mx-1 text-decoration-none" href="projecten.html">Projecten</a>
+                          <a class="text-white mx-1 text-decoration-none" href="contacten.html">Contact</a>
                       </ul>
                   </h3>
               </nav>
@@ -39,7 +39,8 @@
         <div class="card" style="width: 18rem">
           <img class="card-img-top height" src="img/hogerLager.PNG" alt="Card image cap" />
           <div class="card-body">
-            <h5 class="card-title text-center">Build a Game</h5>
+            <h5 class="card-title text-center fw-bold">Hoger Lager</h5>
+            <h5 class="card-title text-center mt-5"></h5>
           </div>
         </div>
       </div>
@@ -47,7 +48,8 @@
         <div class="card" style="width: 18rem">
           <img class="card-img-top height" src="img/download (1).jpg" alt="Card image cap" />
           <div class="card-body">
-            <h5 class="card-title text-center">Hoger Lager</h5>
+            <h5 class="card-title text-center fw-bold">Build a Game</h5>
+            <h5 class="text-center mt-4">Ik moest zeeslag maken, als alle vakjes van een schip gevuld zijn met rode vakjes dan is het schip gezonken. Als jij alle vier de schepen van je tegenstander tot zinken hebt gebracht vóórdat hij de jouwe heeft laten zinken, win je het spel!</h5>
           </div>
         </div>
       </div>
@@ -55,7 +57,17 @@
         <div class="card" style="width: 18rem">
           <img class="card-img-top height" src="img/webcatalogus.PNG" alt="Card image cap" />
           <div class="card-body">
-            <h5 class="card-title text-center">Webcatalogus</h5>
+            <h5 class="card-title text-center fw-bold">Webcatalogus</h5>
+            <h5 class="card-title text-center mt-5">Bij webcatalogus moesten we een webshop maken, als je op een bepaald product klikte werdt je naar die categorie gestuurd daar kon je het product "kopen".</h5>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-3 border border-secondary mt-5 ms-5">
+        <div class="card" style="width: 18rem">
+          <img class="card-img-top height" src="img/boter kaas eiren.png" alt="Card image cap" />
+          <div class="card-body">
+            <h5 class="card-title text-center fw-bold">Boter kaas en eiren</h5>
+            <h5 class="card-title text-center mt-5">Bestaande uit een speelvlak van 3 bij 3 in de vorm van vierkantjes De ene speler legt een kruis en de andere een nul in een willekeurig leeg vak. Diegene die eerst drie van zijn eigen tekens op een rij legt, wint het spel.</h5>
           </div>
         </div>
       </div>
@@ -63,15 +75,17 @@
         <div class="card" style="width: 18rem">
           <img class="card-img-top height" src="..." alt="Card image cap" />
           <div class="card-body">
-            <h5 class="card-title text-center">Boter kaas eiren</h5>
+            <h5 class="card-title text-center fw-bold">Dashboard</h5>
+            <h5 class="card-title text-center mt-5"></h5>
           </div>
         </div>
       </div>
       <div class="col-sm-3 border border-secondary mt-5 ms-5">
         <div class="card" style="width: 18rem">
-          <img class="card-img-top height" src="..." alt="Card image cap" />
+          <img class="card-img-top height" src="img/escaperoom.jpg" alt="Card image cap" />
           <div class="card-body">
-            <h5 class="card-title text-center">Dashboard</h5>
+            <h5 class="card-title text-center fw-bold">Escape Room</h5>
+            <h5 class="card-title text-center mt-5">Bij de escape room moesten we meerdere kamers maken waar je een sleutel of een raadsel moest oplossen om uit die kamer/level te komen</h5>
           </div>
         </div>
       </div>
@@ -82,7 +96,7 @@
   <footer>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg bg-secondary position-absolute top-100 start-50 translate-middle"></div>
+            <div class="footer col-lg bg-secondary position-absolute top-100 start-50 translate-middle"></div>
         </div>
     </div>
 </footer>
