--- a/about me.html
+++ b/about me.html
@@ -22,17 +22,17 @@
                     <nav>
                         <h3>
                             <ul>
-                                <a class="text-white mx-1" href="index.html">home</a>
-                                <a class="text-white mx-1" href="about me.html">About me</a>
-                                <a class="text-white mx-1" href="projecten.html">Projecten</a>
-                                <a class="text-white mx-1" href="contacten.html">Contact</a>
+                                <a class="text-white mx-1 text-decoration-none" href="index.html">home</a>
+                                <a class="text-white mx-1 text-decoration-none" href="about me.html">About me</a>
+                                <a class="text-white mx-1 text-decoration-none" href="projecten.html">Projecten</a>
+                                <a class="text-white mx-1 text-decoration-none" href="contacten.html">Contact</a>
                             </ul>
                         </h3>
                     </nav>
                 </header>
             </div>
         </div>
-    </div>
+      </div>
 
 
     <footer>
