cards op contact page goed gezet

--- a/contacten.html
+++ b/contacten.html
@@ -37,7 +37,7 @@
 
   <div class="container-sm">
     <div class="row">
-      <div class="col-sm-3">
+      <div class="col-sm-3 border border-secondary mt-5 ms-5">
         <div class="card" style="width: 18rem">
           <img class="card-img-top height" src="..." alt="Card image cap" />
           <div class="card-body">
@@ -45,7 +45,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-3">
+      <div class="col-sm-3 border border-secondary mt-5 ms-5">
         <div class="card" style="width: 18rem">
           <img class="card-img-top height" src="..." alt="Card image cap" />
           <div class="card-body">
@@ -53,15 +53,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-3">
-        <div class="card" style="width: 18rem">
-          <img class="card-img-top height" src="..." alt="Card image cap" />
-          <div class="card-body">
-            <h5 class="card-title center"></h5>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-3">
+      <div class="col-sm-3 border border-secondary mt-5 ms-5">
         <div class="card" style="width: 18rem">
           <img class="card-img-top height" src="..." alt="Card image cap" />
           <div class="card-body">
