contact page informatie toegevoegd

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    
+
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg">
@@ -32,7 +32,7 @@
                 </header>
             </div>
         </div>
-      </div>
+    </div>
 
 
     <div class="container-lg">
@@ -53,9 +53,9 @@
 
 
     <div class="container-lg">
-        <div class="row">
+        <div class="row text-center">
             <div class="col-lg height-top">
-
+                Ik ben een Software Developer, ik werk met html, css, javascript en java. Ik kan websites, games en meer programmeren en maken
             </div>
         </div>
     </div>
