--- a/contacten.html
+++ b/contacten.html
@@ -37,27 +37,27 @@
 
   <div class="container-sm">
     <div class="row">
-      <div class="col-sm-3 border border-secondary mt-5 ms-5">
+      <div class="col-sm-3 mt-5 ms-5">
         <div class="card" style="width: 18rem">
-          <img class="card-img-top height" src="..." alt="Card image cap" />
+          <img class="card-img-top height" src="img/teams.jpg" alt="Card image cap" />
           <div class="card-body">
-            <h5 class="card-title center">Teams</h5>
+            <h5 class="card-title text-center">Teams</h5>
           </div>
         </div>
       </div>
-      <div class="col-sm-3 border border-secondary mt-5 ms-5">
+      <div class="col-sm-3 mt-5 ms-5">
         <div class="card" style="width: 18rem">
-          <img class="card-img-top height" src="..." alt="Card image cap" />
+          <img class="card-img-top height" src="img/outlook.jpg" alt="Card image cap" />
           <div class="card-body">
-            <h5 class="card-title center">Outlook</h5>
+            <h5 class="card-title text-center">Outlook</h5>
           </div>
         </div>
       </div>
-      <div class="col-sm-3 border border-secondary mt-5 ms-5">
+      <div class="col-sm-3 mt-5 ms-5">
         <div class="card" style="width: 18rem">
-          <img class="card-img-top height" src="..." alt="Card image cap" />
+          <img class="card-img-top height" src="img/github.jpg" alt="Card image cap" />
           <div class="card-body">
-            <h5 class="card-title center"></h5>
+            <h5 class="card-title text-center">Github</h5>
           </div>
         </div>
       </div>
@@ -65,12 +65,6 @@
   </div>
 
 
-  <footer>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg bg-secondary position-absolute top-100 start-50 translate-middle"></div>
-        </div>
-    </div>
 </footer>
 
 </body>
