--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
     <div class="container-lg">
         <div class="row">
             <div class="col-sm">
-                <h1 class="text-black">
+                <h1 class="text-black text-center">
                     <article>Portfolio</article>
                 </h1>
-                <h2 class="text-black">
+                <h2 class="text-black text-center">
                     <article>Xander Zwolsman</article>
                 </h2>
-                <h2 class="text-black">
+                <h2 class="text-black text-center">
                     <article>Software developer</article>
                 </h2>
             </div>
@@ -54,7 +54,7 @@
 
     <div class="container-lg">
         <div class="row text-center">
-            <div class="col-lg height-top">
+            <div class="col-lg height-top border border-dark border-1">
                 Ik ben een Software Developer, ik werk met html, css, javascript en java. Ik kan websites, games en meer programmeren en maken
             </div>
         </div>
