--- a/about me.html
+++ b/about me.html
@@ -32,7 +32,19 @@
                 </header>
             </div>
         </div>
-      </div>
+    </div>
+
+
+    <div class="container-md">
+        <div class="row">
+            <div class="col-md-4">
+                <img src="im" class="img-thumbnail" alt="...">
+            </div>
+            <div class="col-md-4">
+                
+            </div>
+        </div>
+    </div>
 
 
     <footer>
