informatie toegevoegd bij about-me

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
     <div class="container-lg">
         <div class="row text-center">
             <div class="col-lg height-top border border-dark border-1">
-                Ik ben een Software Developer, ik werk met html, css, javascript en java. Ik kan websites, games en meer programmeren en maken
+                Ik ben een Software Developer, ik werk met html, css, javascript en java. Ik kan websites, games en meer
+                programmeren en maken
             </div>
         </div>
     </div>
