--- a/projecten.html
+++ b/projecten.html
@@ -35,16 +35,16 @@
 
 <div class="container-sm">
   <div class="row">
-    <div class="col-sm-3 border border-secondary mt-5 ms-5">
+    <div class="col-sm-3 border border-secondary mt-5 ms-5 me-5">
       <div class="card" style="width: 18rem">
         <img class="card-img-top height" src="img/hogerLager.PNG" alt="Card image cap" />
         <div class="card-body">
-          <h5><a href="#" class="text-decoration-none text-dark">Hoger Lager</a></h5>
+          <h5><a href="" class="text-decoration-none text-dark">Hoger Lager</a></h5>
           <h5 class="card-title text-center mt-5">Je moest een game maken en dan gokken of je hoger of lager gooit met een digitale dobbelsteen</h5>
         </div>
       </div>
     </div>
-    <div class="col-sm-3 border border-secondary mt-5 ms-5">
+    <div class="col-sm-3 border border-secondary mt-5 ms-5 me-5">
       <div class="card" style="width: 18rem">
         <img class="card-img-top height" src="img/download (1).jpg" alt="Card image cap" />
         <div class="card-body">
@@ -55,7 +55,7 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-3 border border-secondary mt-5 ms-5">
+    <div class="col-sm-3 border border-secondary mt-5 ms-5 me-5">
       <div class="card" style="width: 18rem">
         <img class="card-img-top height" src="img/webcatalogus.PNG" alt="Card image cap" />
         <div class="card-body">
@@ -65,7 +65,7 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-3 border border-secondary mt-5 ms-5">
+    <div class="col-sm-3 border border-secondary mt-5 ms-5 me-5">
       <div class="card" style="width: 18rem">
         <img class="card-img-top height" src="img/boter kaas eiren.png" alt="Card image cap" />
         <div class="card-body">
@@ -76,7 +76,7 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-3 border border-secondary mt-5 ms-5">
+    <div class="col-sm-3 border border-secondary mt-5 ms-5 me-5">
       <div class="card" style="width: 18rem">
         <img class="card-img-top height" src="..." alt="Card image cap" />
         <div class="card-body">
