--- a/about me.html
+++ b/about me.html
@@ -37,11 +37,9 @@
 
     <div class="container-md">
         <div class="row">
-            <div class="col-md-4">
-                <img src="im" class="img-thumbnail" alt="...">
-            </div>
-            <div class="col-md-4">
-                
+            <div class="col-md-4 p-5 pe-5 ">
+                Mijn naam is Xander Zwolsman en ik volg de opleiding software developer bij ROC Mondriaan. Ik kan in
+                html, css en javascript coderen
             </div>
         </div>
     </div>
