--- a/projecten.html
+++ b/projecten.html
@@ -39,7 +39,7 @@
       <div class="card" style="width: 18rem">
         <img class="card-img-top height" src="img/hogerLager.PNG" alt="Card image cap" />
         <div class="card-body">
-          <h5><a href="/hoger lager/h" class="text-decoration-none text-dark">Hoger Lager</a></h5>
+          <h5><a href="/hoger lager/hogerlager.html" class="text-decoration-none text-dark">Hoger Lager</a></h5>
           <h5 class="card-title text-center mt-5">Je moest een game maken en dan gokken of je hoger of lager gooit met een digitale dobbelsteen</h5>
         </div>
       </div>
@@ -59,7 +59,7 @@
       <div class="card" style="width: 18rem">
         <img class="card-img-top height" src="img/webcatalogus.PNG" alt="Card image cap" />
         <div class="card-body">
-          <h5><a href="" class="text-decoration-none text-dark">webcatalogus</a></h5>
+          <h5><a href="/webcatalogus/sd23-p03-project-webcatalogus-dodelijk-bedrijf-main/webcatalogus.html" class="text-decoration-none text-dark">webcatalogus</a></h5>
           <h5 class="card-title text-center mt-5">Bij webcatalogus moesten we een webshop maken, als je op een bepaald
             product klikte werdt je naar die categorie gestuurd daar kon je het product "kopen".</h5>
         </div>
