build a game gelinkt

--- a/projecten.html
+++ b/projecten.html
@@ -48,7 +48,7 @@
       <div class="card" style="width: 18rem">
         <img class="card-img-top height" src="img/download (1).jpg" alt="Card image cap" />
         <div class="card-body">
-          <h5><a href="#" class="text-decoration-none text-dark">Build A Game</a></h5>
+          <h5><a href="/build a game/build a game/Zeeslag.html" class="text-decoration-none text-dark">Build A Game</a></h5>
           <h5 class="text-center mt-4">Ik moest zeeslag maken, als alle vakjes van een schip gevuld zijn met rode vakjes
             dan is het schip gezonken. Als jij alle vier de schepen van je tegenstander tot zinken hebt gebracht vóórdat
             hij de jouwe heeft laten zinken, win je het spel!</h5>
