--- a/about-me.html
+++ b/about-me.html
@@ -23,7 +23,7 @@
                         <h3>
                             <ul>
                                 <a class="text-white mx-1 text-decoration-none" href="index.html">home</a>
-                                <a class="text-white mx-1 text-decoration-none" href="about me.html">About me</a>
+                                <a class="text-white mx-1 text-decoration-none" href="about-me.html">About me</a>
                                 <a class="text-white mx-1 text-decoration-none" href="projecten.html">Projecten</a>
                                 <a class="text-white mx-1 text-decoration-none" href="contacten.html">Contact</a>
                             </ul>
