height en margin aangepast

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
     <div class="container-lg">
         <div class="row">
             <div class="col-sm">
-                <h1 class="text-black text-center">
+                <h1 class="text-black text-center m-3">
                     <article>Portfolio</article>
                 </h1>
-                <h2 class="text-black text-center">
+                <h2 class="text-black text-center m-3">
                     <article>Xander Zwolsman</article>
                 </h2>
-                <h2 class="text-black text-center">
+                <h2 class="text-black text-center m-3">
                     <article>Software developer</article>
                 </h2>
             </div>
