--- a/projecten.html
+++ b/projecten.html
@@ -78,7 +78,7 @@
     </div>
     <div class="col-sm-3 border border-secondary mt-5 ms-5 me-5">
       <div class="card" style="width: 18rem">
-        <img class="card-img-top height" src="..." alt="Card image cap" />
+        <img class="card-img-top height" src="img/Dashboard.png" alt="Card image cap" />
         <div class="card-body">
           <h5><a href="https://github.com/ROCMondriaanTIN/sd23-p04-project-dashboard-krishna-j.git" class="text-decoration-none text-dark">Dashboard</a></h5>
           <h5 class="card-title text-center mt-5">Is een website waar je meerdere grafieken, tabbelen of diagrammen ziet waar informatie over bijvoorbeeld crypto staat</h5>
